Adicionado modal com descrição da vaga - V1

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,15 +18,18 @@ http {
 
         # Proxy reverso para a API do backend
         # Todas as requisições para /api/... serão encaminhadas para o serviço 'backend'
+        # Proxy reverso para a API do backend
+        # Todas as requisições para /api/... serão encaminhadas para o serviço 'backend'
         location /api/ {
-            proxy_pass http://backend:3000/; # 'backend' é o nome do serviço no docker-compose
+            # A barra no final de proxy_pass é crucial.
+            # Ela diz ao Nginx para passar a requisição para a raiz do servidor de backend,
+            # mas mantendo o caminho da requisição original.
+            # Ex: /api/jobs -> http://backend:3000/api/jobs
+            proxy_pass http://backend:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Reescrever a URL, removendo /api do início
-            rewrite /api/(.*) /$1 break;
         }
     }
 }
